crates/fsr/fsr/include/ffx_types.h


typedef enum FfxResourceStates {
    FFX_RESOURCE_STATE_UNORDERED_ACCESS = (1<<0),   
    FFX_RESOURCE_STATE_COMPUTE_READ = (1 << 1),     
    FFX_RESOURCE_STATE_COPY_SRC = (1 << 2),         
    FFX_RESOURCE_STATE_COPY_DEST = (1 << 3),        
    FFX_RESOURCE_STATE_GENERIC_READ = (FFX_RESOURCE_STATE_COPY_SRC | FFX_RESOURCE_STATE_COMPUTE_READ),  
} FfxResourceStates;
typedef void* FfxDevice;
typedef void* FfxCommandList;
typedef struct FfxDimensions2D {
    uint32_t                        width;                                  
    uint32_t                        height;                                 
} FfxDimensions2D;
typedef struct FfxFloatCoords2D {
    float                           x;                                      
    float                           y;                                      
} FfxFloatCoords2D;
typedef struct FfxResourceDescription {
    FfxResourceType                 type;                                   
    FfxSurfaceFormat                format;                                 
    uint32_t                        width;                                  
    uint32_t                        height;                                 
    uint32_t                        depth;                                  
    uint32_t                        mipCount;                               
    FfxResourceFlags                flags;                                  
} FfxResourceDescription;
typedef struct FfxResource {
    void*                           resource;                               
    wchar_t                         name[64];
    FfxResourceDescription          description;
    FfxResourceStates               state;
    bool                            isDepth;
    uint64_t                        descriptorData;
} FfxResource;